k8s/manifest/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: go-app-new
subsets:
  - addresses:
      - ip: 172.31.12.34
    ports:
      - port: 8080
        protocol: TCP
